<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bebaagua_png"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/bebaagua"
        app:layout_constraintBottom_toBottomOf="@+id/container_header"
        app:layout_constraintEnd_toEndOf="@+id/container_header"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/btn_refresh"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="@+id/container_header"
        app:layout_constraintEnd_toEndOf="@+id/container_header"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_quilos"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_peso"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/container_resultado"
        app:layout_constraintTop_toBottomOf="@+id/container_header" />

    <EditText
        android:id="@+id/txt_idade"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/hint_idade"
        android:inputType="number"
        android:maxLength="3"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/container_resultado"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/txt_quilos"
        app:layout_constraintTop_toBottomOf="@id/container_header" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_degrade_button"
        android:padding="15dp"
        android:text="@string/text_button_calcular"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_quilos" />

    <View
        android:id="@+id/container_resultado"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/container_resultado_ml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3008,6 ml"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/container_resultado"
        app:layout_constraintEnd_toEndOf="@+id/container_resultado"
        app:layout_constraintStart_toStartOf="@+id/container_resultado"
        app:layout_constraintTop_toTopOf="@+id/container_resultado" />

    <Button
        android:id="@+id/button_lembrete"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/text_button_lembrete"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_resultado" />

    <Button
        android:id="@+id/button_alarme"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/text_button_alarme"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_lembrete"
        app:layout_constraintEnd_toEndOf="@+id/container_resultado"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_lembrete"
        app:layout_constraintTop_toTopOf="@+id/button_lembrete"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/text_hora"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_dois_pontos"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_dois_pontos"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dois_pontos"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_resultado"
        app:layout_constraintVertical_bias="0.631" />

    <TextView
        android:id="@+id/text_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/text_minutos"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_dois_pontos"
        app:layout_constraintTop_toTopOf="@+id/text_dois_pontos"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

